<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NYU SHuttle Driver</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="latitude" translatable="true">Latitude:</string>
    <string name="longitude" translatable="true">Longitude:</string>
    <string name="current_status" translatable="true">Current status:</string>
    <string name="start" translatable="true">START</string>
    <string name="stop" translatable="true">STOP</string>
    <string name="started">On route</string>
    <string name="stopped" translatable="true">Stopped</string>
    <string name="select_route" translatable="true">[Select your route]</string>
    <string name="route_a" translatable="true">Route A: Academic B - Motel 268</string>
    <string name="route_b" translatable="true">Route B: Gr Pujian - Academic B</string>
    <string name="route_c" translatable="true">Route C: Academic B - Gr Pujian</string>
    <string name="route_bc" translatable="true">Route BC: Academic B = Gr Pujian</string>
    <string name="please_select_route" translatable="true">Please select a route first!</string>
    <string name="please_enable_location" translatable="true">Please enable location services!</string>
    <string name="location_not_av" translatable="true">Location not available</string>
    <string name="no_internet" translatable="true">No internet connection</string>
    <string name="up_to_date" translatable="true">Up to date!</string>
    <string name="application_outdated" translatable="true">Application outdated. Downloading current version...</string>
    <string name="title_activity_splash">NYU SHuttle Driver</string>
</resources>
